@@ -17,6 +17,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -44,7 +45,7 @@ public class AiImageHandle extends ExceptionRespMessageToSenderHandle {
 		List<BotMessageChain> respList = new ArrayList<>();
 		for (String imageData : imageList) {
 			String base64Image = imageData.split(",")[1];
-			byte[] imageBytes = javax.xml.bind.DatatypeConverter.parseBase64Binary(base64Image);
+			byte[] imageBytes = Base64.getDecoder().decode(base64Image);
 			BufferedImage buffImage = ImageIO.read(new ByteArrayInputStream(imageBytes));
 			try (ByteArrayOutputStream os = new ByteArrayOutputStream()) {
 				ImageIO.write(buffImage, "png", os);                          // Passing: ​(RenderedImage im, String formatName, OutputStream output)
